--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.23.1",
     "vue": "^2.7.7",
     "vue-router": "^3.5.4",
-    "vue-tailwind": "^2.5.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
