--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.23.1",
+    "dayjs": "^1.11.10",
     "vue": "^2.7.7",
     "vue-router": "^3.5.4",
     "vuex": "^3.6.2"
