--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview --port 4173",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "babel-jest": "^29.7.0",
     "bootstrap-vue": "^2.23.1",
     "dayjs": "^1.11.10",
+    "jest": "^29.7.0",
     "vue": "^2.7.7",
     "vue-router": "^3.5.4",
     "vuex": "^3.6.2"
